lib/gg_script/parser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
document' -> . document [ # ]
## Transitions:
-- On TEMPLATE shift to state 1
-- On INTERFACE shift to state 52
-- On EVENT_HANDLER shift to state 75
-- On EVENT shift to state 86
-- On ENTITY shift to state 107
-- On DATA_SOURCE shift to state 117
-- On CALL_HANDLER shift to state 122
-- On toplevel shift to state 129
-- On list(toplevel) shift to state 132
-- On entity shift to state 131
-- On document shift to state 134
## Reductions:
-- On EOF
--   reduce production list(toplevel) ->

State 1:
## Known stack suffix:
## TEMPLATE
## LR(1) items:
toplevel -> TEMPLATE . IDENT RBRACE structure(EQUALS,expr) RBRACE [ TEMPLATE INTERFACE EVENT_HANDLER EVENT EOF ENTITY DATA_SOURCE CALL_HANDLER ]
## Transitions:
-- On IDENT shift to state 2
## Reductions:

State 2:
## Known stack suffix:
## TEMPLATE IDENT
## LR(1) items:
toplevel -> TEMPLATE IDENT . RBRACE structure(EQUALS,expr) RBRACE [ TEMPLATE INTERFACE EVENT_HANDLER EVENT EOF ENTITY DATA_SOURCE CALL_HANDLER ]
## Transitions:
-- On RBRACE shift to state 3
## Reductions:

State 3:
## Known stack suffix:
## TEMPLATE IDENT RBRACE
## LR(1) items:
toplevel -> TEMPLATE IDENT RBRACE . structure(EQUALS,expr) RBRACE [ TEMPLATE INTERFACE EVENT_HANDLER EVENT EOF ENTITY DATA_SOURCE CALL_HANDLER ]
## Transitions:
-- On IDENT shift to state 4
-- On structure(EQUALS,expr) shift to state 50
-- On list(__anonymous_0(EQUALS,expr)) shift to state 16
## Reductions:
-- On RBRACE
--   reduce production list(__anonymous_0(EQUALS,expr)) ->

State 4:
## Known stack suffix:
## IDENT
## LR(1) items:
list(__anonymous_0(EQUALS,expr)) -> IDENT . EQUALS expr list(__anonymous_0(EQUALS,expr)) [ RBRACE ]
## Transitions:
-- On EQUALS shift to state 5
## Reductions:

State 5:
## Known stack suffix:
## IDENT EQUALS
## LR(1) items:
list(__anonymous_0(EQUALS,expr)) -> IDENT EQUALS . expr list(__anonymous_0(EQUALS,expr)) [ RBRACE ]
## Transitions:
-- On UPDATE shift to state 6
-- On SUB shift to state 9
-- On STRING shift to state 10
-- On NEW_TEMPLATE shift to state 11
-- On NEW_ENTITY shift to state 17
-- On INT shift to state 20
-- On IDENT shift to state 21
-- On FLOAT shift to state 25
-- On BOOL shift to state 26
-- On vpath shift to state 27
-- On literal shift to state 28
-- On expr shift to state 48
## Reductions:

State 6:
## Known stack suffix:
## UPDATE
## LR(1) items:
expr -> UPDATE . IDENT LPAREN expr RPAREN LBRACE structure(EQUALS,expr) RBRACE [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
## Transitions:
-- On IDENT shift to state 7
## Reductions:

State 7:
## Known stack suffix:
## UPDATE IDENT
## LR(1) items:
expr -> UPDATE IDENT . LPAREN expr RPAREN LBRACE structure(EQUALS,expr) RBRACE [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
## Transitions:
-- On LPAREN shift to state 8
## Reductions:

State 8:
## Known stack suffix:
## UPDATE IDENT LPAREN
## LR(1) items:
expr -> UPDATE IDENT LPAREN . expr RPAREN LBRACE structure(EQUALS,expr) RBRACE [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
## Transitions:
-- On UPDATE shift to state 6
-- On SUB shift to state 9
-- On STRING shift to state 10
-- On NEW_TEMPLATE shift to state 11
-- On NEW_ENTITY shift to state 17
-- On INT shift to state 20
-- On IDENT shift to state 21
-- On FLOAT shift to state 25
-- On BOOL shift to state 26
-- On vpath shift to state 27
-- On literal shift to state 28
-- On expr shift to state 43
## Reductions:

State 9:
## Known stack suffix:
## SUB
## LR(1) items:
expr -> SUB . expr [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
## Transitions:
-- On UPDATE shift to state 6
-- On SUB shift to state 9
-- On STRING shift to state 10
-- On NEW_TEMPLATE shift to state 11
-- On NEW_ENTITY shift to state 17
-- On INT shift to state 20
-- On IDENT shift to state 21
-- On FLOAT shift to state 25
-- On BOOL shift to state 26
-- On vpath shift to state 27
-- On literal shift to state 28
-- On expr shift to state 42
## Reductions:

State 10:
## Known stack suffix:
## STRING
## LR(1) items:
literal -> STRING . [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
## Transitions:
## Reductions:
-- On UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD
--   reduce production literal -> STRING

State 11:
## Known stack suffix:
## NEW_TEMPLATE
## LR(1) items:
expr -> NEW_TEMPLATE . IDENT LBRACE structure(EQUALS,expr) RBRACE [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
## Transitions:
-- On IDENT shift to state 12
## Reductions:

State 12:
## Known stack suffix:
## NEW_TEMPLATE IDENT
## LR(1) items:
expr -> NEW_TEMPLATE IDENT . LBRACE structure(EQUALS,expr) RBRACE [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
## Transitions:
-- On LBRACE shift to state 13
## Reductions:

State 13:
## Known stack suffix:
## NEW_TEMPLATE IDENT LBRACE
## LR(1) items:
expr -> NEW_TEMPLATE IDENT LBRACE . structure(EQUALS,expr) RBRACE [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
## Transitions:
-- On IDENT shift to state 4
-- On structure(EQUALS,expr) shift to state 14
-- On list(__anonymous_0(EQUALS,expr)) shift to state 16
## Reductions:
-- On RBRACE
--   reduce production list(__anonymous_0(EQUALS,expr)) ->

State 14:
## Known stack suffix:
## NEW_TEMPLATE IDENT LBRACE structure(EQUALS,expr)
## LR(1) items:
expr -> NEW_TEMPLATE IDENT LBRACE structure(EQUALS,expr) . RBRACE [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
## Transitions:
-- On RBRACE shift to state 15
## Reductions:

State 15:
## Known stack suffix:
## NEW_TEMPLATE IDENT LBRACE structure(EQUALS,expr) RBRACE
## LR(1) items:
expr -> NEW_TEMPLATE IDENT LBRACE structure(EQUALS,expr) RBRACE . [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
## Transitions:
## Reductions:
-- On UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD
--   reduce production expr -> NEW_TEMPLATE IDENT LBRACE structure(EQUALS,expr) RBRACE

State 16:
## Known stack suffix:
## list(__anonymous_0(EQUALS,expr))
## LR(1) items:
structure(EQUALS,expr) -> list(__anonymous_0(EQUALS,expr)) . [ RBRACE ]
## Transitions:
## Reductions:
-- On RBRACE
--   reduce production structure(EQUALS,expr) -> list(__anonymous_0(EQUALS,expr))

State 17:
## Known stack suffix:
## NEW_ENTITY
## LR(1) items:
expr -> NEW_ENTITY . IDENT LPAREN expr RPAREN LBRACE structure(EQUALS,expr) RBRACE [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
## Transitions:
-- On IDENT shift to state 18
## Reductions:

State 18:
## Known stack suffix:
## NEW_ENTITY IDENT
## LR(1) items:
expr -> NEW_ENTITY IDENT . LPAREN expr RPAREN LBRACE structure(EQUALS,expr) RBRACE [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
## Transitions:
-- On LPAREN shift to state 19
## Reductions:

State 19:
## Known stack suffix:
## NEW_ENTITY IDENT LPAREN
## LR(1) items:
expr -> NEW_ENTITY IDENT LPAREN . expr RPAREN LBRACE structure(EQUALS,expr) RBRACE [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
## Transitions:
-- On UPDATE shift to state 6
-- On SUB shift to state 9
-- On STRING shift to state 10
-- On NEW_TEMPLATE shift to state 11
-- On NEW_ENTITY shift to state 17
-- On INT shift to state 20
-- On IDENT shift to state 21
-- On FLOAT shift to state 25
-- On BOOL shift to state 26
-- On vpath shift to state 27
-- On literal shift to state 28
-- On expr shift to state 29
## Reductions:

State 20:
## Known stack suffix:
## INT
## LR(1) items:
literal -> INT . [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
## Transitions:
## Reductions:
-- On UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD
--   reduce production literal -> INT

State 21:
## Known stack suffix:
## IDENT
## LR(1) items:
vpath -> IDENT . DOT IDENT [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
vpath -> IDENT . [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
vpath -> IDENT . vpath [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
## Transitions:
-- On IDENT shift to state 21
-- On DOT shift to state 22
-- On vpath shift to state 24
## Reductions:
-- On UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD
--   reduce production vpath -> IDENT
** Conflict on IDENT

State 22:
## Known stack suffix:
## IDENT DOT
## LR(1) items:
vpath -> IDENT DOT . IDENT [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
## Transitions:
-- On IDENT shift to state 23
## Reductions:

State 23:
## Known stack suffix:
## IDENT DOT IDENT
## LR(1) items:
vpath -> IDENT DOT IDENT . [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
## Transitions:
## Reductions:
-- On UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD
--   reduce production vpath -> IDENT DOT IDENT

State 24:
## Known stack suffix:
## IDENT vpath
## LR(1) items:
vpath -> IDENT vpath . [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
## Transitions:
## Reductions:
-- On UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD
--   reduce production vpath -> IDENT vpath

State 25:
## Known stack suffix:
## FLOAT
## LR(1) items:
literal -> FLOAT . [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
## Transitions:
## Reductions:
-- On UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD
--   reduce production literal -> FLOAT

State 26:
## Known stack suffix:
## BOOL
## LR(1) items:
literal -> BOOL . [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
## Transitions:
## Reductions:
-- On UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD
--   reduce production literal -> BOOL

State 27:
## Known stack suffix:
## vpath
## LR(1) items:
expr -> vpath . [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
## Transitions:
## Reductions:
-- On UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD
--   reduce production expr -> vpath

State 28:
## Known stack suffix:
## literal
## LR(1) items:
expr -> literal . [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
## Transitions:
## Reductions:
-- On UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD
--   reduce production expr -> literal

State 29:
## Known stack suffix:
## NEW_ENTITY IDENT LPAREN expr
## LR(1) items:
expr -> expr . ADD expr [ SUB RPAREN MUL DIV ADD ]
expr -> expr . SUB expr [ SUB RPAREN MUL DIV ADD ]
expr -> expr . MUL expr [ SUB RPAREN MUL DIV ADD ]
expr -> expr . DIV expr [ SUB RPAREN MUL DIV ADD ]
expr -> NEW_ENTITY IDENT LPAREN expr . RPAREN LBRACE structure(EQUALS,expr) RBRACE [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
## Transitions:
-- On SUB shift to state 30
-- On RPAREN shift to state 36
-- On MUL shift to state 32
-- On DIV shift to state 34
-- On ADD shift to state 40
## Reductions:

State 30:
## Known stack suffix:
## expr SUB
## LR(1) items:
expr -> expr SUB . expr [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
## Transitions:
-- On UPDATE shift to state 6
-- On SUB shift to state 9
-- On STRING shift to state 10
-- On NEW_TEMPLATE shift to state 11
-- On NEW_ENTITY shift to state 17
-- On INT shift to state 20
-- On IDENT shift to state 21
-- On FLOAT shift to state 25
-- On BOOL shift to state 26
-- On vpath shift to state 27
-- On literal shift to state 28
-- On expr shift to state 31
## Reductions:

State 31:
## Known stack suffix:
## expr SUB expr
## LR(1) items:
expr -> expr . ADD expr [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
expr -> expr . SUB expr [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
expr -> expr SUB expr . [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
expr -> expr . MUL expr [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
expr -> expr . DIV expr [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
## Transitions:
-- On MUL shift to state 32
-- On DIV shift to state 34
## Reductions:
-- On UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY LBRACE INT IDENT FLOAT BOOL ADD
--   reduce production expr -> expr SUB expr

State 32:
## Known stack suffix:
## expr MUL
## LR(1) items:
expr -> expr MUL . expr [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
## Transitions:
-- On UPDATE shift to state 6
-- On SUB shift to state 9
-- On STRING shift to state 10
-- On NEW_TEMPLATE shift to state 11
-- On NEW_ENTITY shift to state 17
-- On INT shift to state 20
-- On IDENT shift to state 21
-- On FLOAT shift to state 25
-- On BOOL shift to state 26
-- On vpath shift to state 27
-- On literal shift to state 28
-- On expr shift to state 33
## Reductions:

State 33:
## Known stack suffix:
## expr MUL expr
## LR(1) items:
expr -> expr . ADD expr [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
expr -> expr . SUB expr [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
expr -> expr . MUL expr [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
expr -> expr MUL expr . [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
expr -> expr . DIV expr [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
## Transitions:
## Reductions:
-- On UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD
--   reduce production expr -> expr MUL expr

State 34:
## Known stack suffix:
## expr DIV
## LR(1) items:
expr -> expr DIV . expr [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
## Transitions:
-- On UPDATE shift to state 6
-- On SUB shift to state 9
-- On STRING shift to state 10
-- On NEW_TEMPLATE shift to state 11
-- On NEW_ENTITY shift to state 17
-- On INT shift to state 20
-- On IDENT shift to state 21
-- On FLOAT shift to state 25
-- On BOOL shift to state 26
-- On vpath shift to state 27
-- On literal shift to state 28
-- On expr shift to state 35
## Reductions:

State 35:
## Known stack suffix:
## expr DIV expr
## LR(1) items:
expr -> expr . ADD expr [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
expr -> expr . SUB expr [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
expr -> expr . MUL expr [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
expr -> expr . DIV expr [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
expr -> expr DIV expr . [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
## Transitions:
## Reductions:
-- On UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD
--   reduce production expr -> expr DIV expr

State 36:
## Known stack suffix:
## NEW_ENTITY IDENT LPAREN expr RPAREN
## LR(1) items:
expr -> NEW_ENTITY IDENT LPAREN expr RPAREN . LBRACE structure(EQUALS,expr) RBRACE [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
## Transitions:
-- On LBRACE shift to state 37
## Reductions:

State 37:
## Known stack suffix:
## NEW_ENTITY IDENT LPAREN expr RPAREN LBRACE
## LR(1) items:
expr -> NEW_ENTITY IDENT LPAREN expr RPAREN LBRACE . structure(EQUALS,expr) RBRACE [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
## Transitions:
-- On IDENT shift to state 4
-- On structure(EQUALS,expr) shift to state 38
-- On list(__anonymous_0(EQUALS,expr)) shift to state 16
## Reductions:
-- On RBRACE
--   reduce production list(__anonymous_0(EQUALS,expr)) ->

State 38:
## Known stack suffix:
## NEW_ENTITY IDENT LPAREN expr RPAREN LBRACE structure(EQUALS,expr)
## LR(1) items:
expr -> NEW_ENTITY IDENT LPAREN expr RPAREN LBRACE structure(EQUALS,expr) . RBRACE [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
## Transitions:
-- On RBRACE shift to state 39
## Reductions:

State 39:
## Known stack suffix:
## NEW_ENTITY IDENT LPAREN expr RPAREN LBRACE structure(EQUALS,expr) RBRACE
## LR(1) items:
expr -> NEW_ENTITY IDENT LPAREN expr RPAREN LBRACE structure(EQUALS,expr) RBRACE . [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
## Transitions:
## Reductions:
-- On UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD
--   reduce production expr -> NEW_ENTITY IDENT LPAREN expr RPAREN LBRACE structure(EQUALS,expr) RBRACE

State 40:
## Known stack suffix:
## expr ADD
## LR(1) items:
expr -> expr ADD . expr [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
## Transitions:
-- On UPDATE shift to state 6
-- On SUB shift to state 9
-- On STRING shift to state 10
-- On NEW_TEMPLATE shift to state 11
-- On NEW_ENTITY shift to state 17
-- On INT shift to state 20
-- On IDENT shift to state 21
-- On FLOAT shift to state 25
-- On BOOL shift to state 26
-- On vpath shift to state 27
-- On literal shift to state 28
-- On expr shift to state 41
## Reductions:

State 41:
## Known stack suffix:
## expr ADD expr
## LR(1) items:
expr -> expr . ADD expr [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
expr -> expr ADD expr . [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
expr -> expr . SUB expr [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
expr -> expr . MUL expr [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
expr -> expr . DIV expr [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
## Transitions:
-- On MUL shift to state 32
-- On DIV shift to state 34
## Reductions:
-- On UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY LBRACE INT IDENT FLOAT BOOL ADD
--   reduce production expr -> expr ADD expr

State 42:
## Known stack suffix:
## SUB expr
## LR(1) items:
expr -> SUB expr . [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
expr -> expr . ADD expr [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
expr -> expr . SUB expr [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
expr -> expr . MUL expr [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
expr -> expr . DIV expr [ UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY MUL LBRACE INT IDENT FLOAT DIV BOOL ADD ]
## Transitions:
-- On MUL shift to state 32
-- On DIV shift to state 34
## Reductions:
-- On UPDATE SUB STRING RPAREN RBRACE NEW_TEMPLATE NEW_ENTITY LBRACE INT IDENT FLOAT BOOL ADD
--   reduce production expr -> SUB expr
